language/move-prover/tests/sources/arithm.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/arithm.move:88:9 ───
    │
 88 │         aborts_if false;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/arithm.move:84:5: div_by_zero_u64_bad (entry)
    =     at tests/sources/arithm.move:85:11: div_by_zero_u64_bad (ABORTED)
    =         x = <redacted>,
    =         y = <redacted>

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/arithm.move:140:9 ───
     │
 140 │         aborts_if false;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/arithm.move:136:5: overflow_u128_add_bad (entry)
     =     at tests/sources/arithm.move:137:11: overflow_u128_add_bad (ABORTED)
     =         x = <redacted>,
     =         y = <redacted>

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/arithm.move:193:9 ───
     │
 193 │         aborts_if false;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/arithm.move:189:5: overflow_u128_mul_bad (entry)
     =     at tests/sources/arithm.move:190:11: overflow_u128_mul_bad (ABORTED)
     =         x = <redacted>,
     =         y = <redacted>

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/arithm.move:124:9 ───
     │
 124 │         aborts_if false;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/arithm.move:120:5: overflow_u64_add_bad (entry)
     =     at tests/sources/arithm.move:121:11: overflow_u64_add_bad (ABORTED)
     =         x = <redacted>,
     =         y = <redacted>

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/arithm.move:177:9 ───
     │
 177 │         aborts_if false;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/arithm.move:173:5: overflow_u64_mul_bad (entry)
     =     at tests/sources/arithm.move:174:11: overflow_u64_mul_bad (ABORTED)
     =         x = <redacted>,
     =         y = <redacted>

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/arithm.move:108:9 ───
     │
 108 │         aborts_if false;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/arithm.move:104:5: overflow_u8_add_bad (entry)
     =     at tests/sources/arithm.move:105:11: overflow_u8_add_bad (ABORTED)
     =         x = <redacted>,
     =         y = <redacted>

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/arithm.move:161:9 ───
     │
 161 │         aborts_if false;
     │         ^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/arithm.move:157:5: overflow_u8_mul_bad (entry)
     =     at tests/sources/arithm.move:158:11: overflow_u8_mul_bad (ABORTED)
     =         x = <redacted>,
     =         y = <redacted>
